// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards renders correctly, NodeCard 1`] = `
<div
  className="node-card-container"
  onClick={[Function]}
>
  <h2>
    BeaconNode
  </h2>
  <span
    className="node-text"
  >
    rocketsonic.hr
  </span>
  <div
    className="row centered"
  >
    <h2>
      21
    </h2>
    <div
      className="__react_component_tooltip place-top type-dark "
      data-id="tooltip"
    />
    <span
      className="success-icon"
      data-tip="Synced"
    />
  </div>
  <span
    className="node-text time"
  >
    Slot height
  </span>
</div>
`;

exports[`Cards renders correctly, ValidatorStat, ETH 1`] = `
<div
  className="validator-card-container"
>
  <h5>
    Balance
  </h5>
  <h1>
    .1405
  </h1>
  <h5>
    ETH
  </h5>
</div>
`;

exports[`Cards renders correctly, ValidatorStat, ROI 1`] = `
<div
  className="validator-card-container"
>
  <h5>
    Return (ETH)
  </h5>
  <h1
    className="plus"
  >
    +
    20
    %
  </h1>
  <h5
    className="plus"
  >
    ROI
  </h5>
</div>
`;

exports[`Cards renders correctly, ValidatorStat, days 1`] = `
<div
  className="validator-card-container"
>
  <h5>
    Uptime
  </h5>
  <h1>
    45.3
  </h1>
  <h5>
    DAYS
  </h5>
</div>
`;
